fix: method to get doctor latest appointments